@@ -54,6 +54,10 @@ In progress
 	[ ] ALife escaping surrender via safety maps
 	[ ] Incapacitate by non-leg wounds
 	[ ] Depending on distance, being incapacitated could cause the ALife to try and escape otherwise
+	[ ] Knocking out
+	[ ] Searching after grenade explosions
+	[ ] Run from grenades
+		[ ] Chunk map: track items
 
 up_threshold = 50
 sampling_down_factor = 10
@@ -64,3 +68,11 @@ Take the score and compare it to the ALife's courage skill. We can translate the
 to this score to find out whether to run away or not. **
 
 If ALife begins dialog while entering or in the surrender state, change dialog based on intimidation
+
+Given the situation:
+	Player tosses grenade into room
+	Enemies are unaware
+	They are injured by the explosion
+	How do they react? Who do they blame?
+		They don't know who threw the grenade, but we need to communicate action
+	How do we ALife tracking item ownership?
